    allow edit bookmark to network URL
    corrected Click runs executables pref not saved fixes #84
    auto-unmount removed media and devices
    support xfce terminal
    improve new file/folder/link dialog
    change deprecated gdk_pixbuf_ref to g_object_ref
    don't remove .gz file when extracting closes #90
    CLI added -r, --reuse-tab  Open folder in current tab of last used window
0.7.7   2012-05-27:
    escape mount point in dev props scripts fixes #70
    fixed File|File Search keybinding
    extract zip, rar, 7z in terminal for output & password prompt fixes #72
    if no 7za, use 7zr for 7zip extraction and creation closes #62
    added rar creation closes #36 ; rar zip & 7z creation runs in terminal
    fixed hang on new tab added after mount
    fixed make errors with --disable-desktop-integration fixes #78
    udevil discovery; pmount ahead of udisks
0.7.6   2012-04-19:
    unmount on exit no longer default (affects new installs)
    documented deb packages require $TMPDIR not be noexec closes #64
    relax has media criteria fixes #68
    hack for icon theme missing application-x-xz-compressed-tar fixes #55
    added kernel polling recommendation to docs closes #66
    desktop new tab present window fixes #16
    file permissions show SUID and SGID bits
    file permissions show char device, block device, pipe, socket
    panel show inhibit tab creation on spec
0.7.5   2012-04-14:
    replaced udisks with libudev kernel support for device detection and info
    udisks v1 & v2 now supported for mount/unmount as normal user
    added device Settings|Un/Mount Command options to customize mount program
    corrected race condition create tmp dir
    status bar update fixes
    side box fixed size fixes #6
    scroll setting retained between sessions fixes #13
    fixed file info update on existing fixes #14 fixes #15
    reuse window on open folder on desktop fixes #16
    built-in archive functions on desktop closes #18