@@ -2,7 +2,7 @@ SpaceFM:
 
 Developer: IgnorantGuru <ignorantguru@gmx.com>
 Icons:     SpaceFM icons and logo by Goran Simovic
-           Additional icons were taken from Tango Projects icon set
+           Additional icons were taken from the Tango Desktop Project icon set
 
 
 ==============================================================================
