@@ -301,7 +301,8 @@ Help Options:
   --help-gtk               Show GTK+ Options
 
 Application Options:
-  -t, --new-tab            Open folders in last used window (default)
+  -t, --new-tab            Open folders in new tab of last window (default)
+  -r, --reuse-tab          Open folder in current tab of last used window
   -w, --new-window         Open folders in new window
   -p, --panel=P            Open folders in panel 'P' (1-4)
   --desktop                Launch desktop manager
