@@ -6,7 +6,7 @@
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="has_separator">False</property>
     <property name="program_name">SpaceFM</property>
-    <property name="comments" translatable="no">by IgnorantGuru</property>
+    <property name="comments" translatable="yes">by IgnorantGuru</property>
     <property name="copyright" translatable="yes">Copyright (C) 2012    GPL2</property>
     <property name="website">http://ignorantguru.github.com/spacefm/</property>
     <property name="license" translatable="yes">SpaceFM - Copyright (C) 2012   GPL2
@@ -35,7 +35,7 @@ Source code taken from other projects:
     <property comments="Please replace this line with your own names, one name per line. " name="translator_credits" translatable="yes">translator-credits</property>
     <property name="artists" translatable="yes">SpaceFM icons and logo by Goran Simovic
 
-Additional icons were taken from Tango Projects icon set</property>
+Additional icons were taken from the Tango Desktop Project icon set</property>
     <property name="logo_icon_name">spacefm</property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
